--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,8 @@
         integrity="sha512-P5MgMn1jBN01asBgU0z60Qk4QxiXo86+wlFahKrsQf37c9cro517WzVSPPV1tDKzhku2iJ2FVgL67wG03SGnNA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -24,7 +26,7 @@
 
             </h3>
             <nav class="nav-link">
-                <button id="logout" class="nav-link active">logout</button>
+                <button id="logout" class="nav-link active">LOGOUT</button>
                 {{else}}
                 <a class="nav-link navbar-right" href="/login">login</a>
                 {{/if}}
