--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -11,7 +11,7 @@
             |
             <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
         </div>
-        <button type="submit">Save Post</button>
+        <button class="sv-post" type="submit">Save Post</button>
         <button type="button" class="delete-post-btn">Delete Post</button>
     </form>
 </article>
@@ -22,7 +22,7 @@
     </div>
 
     <div>
-        <button type="submit">Add Comment</button>
+        <button class="add-comment" type="submit">Add Comment</button>
     </div>
 </form>
 
